--- a/spottrade/Info.plist
+++ b/spottrade/Info.plist
@@ -2,6 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>SpotTrade would like to request your location</string>
+	<key>NSLocationUsageDescription</key>
+	<string>SpotTrade needs to track your location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>SpotTrade tracking your location</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>SpotTrade would like to request your location</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -31,8 +39,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
